fixed alignment on entryType_list

--- a/app/sass/new_entry.sass
+++ b/app/sass/new_entry.sass
@@ -50,11 +50,7 @@
     .entryType
       +round(16)
       +right
-      //
-        +center
-        +absolute
       right: 70px
-      width: 160px
       height: 34px
       line-height: 34px
       img.typeSelection
@@ -66,13 +62,14 @@
         +font(14)
         +pointer
         +right
+        +center
         border: 0
         height: 34px
         line-height: 34px
         padding: 7px 8px 7px 2px
         option
           padding: 8px 4px 8px 38px
-          margin-right: -20px
+          text-align: left
         option.dream
           background: url(/images/icons/dream-24.png) no-repeat 8px center
         option.vision
